--- a/day-7-complete/NikeJordee/pages/success.css
+++ b/day-7-complete/NikeJordee/pages/success.css
@@ -53,7 +53,7 @@
     transform: scale(1.05);
   }
   
-  button {
+  a {
     padding: 1rem 2rem;
     background: linear-gradient(to right, #38bdf8, #3b82f6);
     color: white;
@@ -65,7 +65,7 @@
     margin-top: 2rem;
   }
   
-  button:hover {
+  a:hover {
     background: linear-gradient(to left, #38bdf8, #3b82f6);
     transform: scale(1.05);
   }
